--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,26 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: postgresql
-  pool: unicode
-  timeout: 5
-
 development:
-  <<: *default
+  adapter: postgresql
+  encoding: utf8
   database: bid_site_development
+  pool: 5
+  username:
+  password:
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
+test: &TEST
+  adapter: postgresql
+  encoding: utf8
   database: bid_site_test
+  pool: 5
+  username:
+  password:
 
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: utf8
   database: bid_site_production
+  pool: 5
+  username:
+  password:
+
+cucumber:
+  <<: *TEST
